# libcppx

./: .gitignore  .gitmodules  CMAKE_BUILD.md  CMakeLists.txt  LICENSE  README.md
3rd/: build_3rd.sh
base/: CMakeLists.txt  Makefile  compile.sh
base/include/: cppx_common.h  cppx_error_code.h  cppx_export.h  cppx_get_time.h  cppx_json.h  cppx_last_error.h  cppx_time.h  task_scheduler.h
base/include/channel/: channel.h  channel_ex.h
base/include/log/: cppx_log.h
base/include/logger/: logger.h  logger_ex.h  logger_ex2.h
base/include/memory/: allocator.h  allocator_ex.h
base/include/thread/: cppx_thread.h  cppx_thread_manager.h  spin_lock.h  task_scheduler.h  thread.h  thread_manager.h
base/include/utilities/: common.h  cppx_common.h  cppx_json.h  cppx_last_error.h  cppx_time.h  error_code.h  export.h  json.h  time.h
base/sources/: cppx_get_time.cpp  cppx_json_impl.cpp  cppx_json_impl.h  cppx_last_error.cpp  cppx_time_impl.cpp  task_scheduler_impl.cpp  task_scheduler_impl.h  task_scherduler_impl.cpp
base/sources/channel/: channel_common.h  channel_impl.cpp  channel_impl.h  mpsc_variable_bounded_channel.cpp  mpsc_variable_bounded_channel.h  spsc_channel.cpp  spsc_channel.h  spsc_fixed_bounded_channel.cpp  spsc_fixed_bounded_channel.h  spsc_variable_bounded_channel.cpp  spsc_variable_bounded_channel.h
base/sources/log/: cppx_log_impl.cpp  cppx_log_impl.h  logger_impl.cpp  logger_impl.h
base/sources/logger/: logger_impl.cpp  logger_impl.h
base/sources/memory/: allocator_impl.cpp  allocator_impl.h
base/sources/thread/: cppx_task_scheduler_impl.cpp  cppx_task_scheduler_impl.h  cppx_thread_impl.cpp  cppx_thread_impl.h  cppx_thread_manager_impl.cpp  cppx_thread_manager_impl.h  spin_lock_impl.cpp  spin_lock_impl.h  task_scheduler_impl.cpp  task_scheduler_impl.h  thread_impl.cpp  thread_impl.h  thread_manager_impl.cpp  thread_manager_impl.h
base/sources/utilities/: cppx_json_impl.cpp  cppx_json_impl.h  cppx_last_error.cpp  cppx_time_impl.cpp  error_code_impl.cpp  json_impl.cpp  json_impl.h  time_impl.cpp
base/unittest/: Makefile  compile.sh  run_unittest.sh  test_cppx_json.cpp  test_cppx_last_error.cpp  test_cppx_time.cpp  test_task_scheduler.cpp
base/unittest/cppx_last_error/: Makefile  cppx_last_error_test.cpp
base/unittest/thread/: test_task_scheduler.cpp
base/unittest/utilities/: test_cppx_json.cpp  test_cppx_last_error.cpp  test_cppx_time.cpp  test_json.cpp  test_time.cpp
doc/code_analysis/: linux_timezone.md
doc/template/: Makefile
doc/tutorial/: build_compiler.sh  compile_tools.md  docker_install_usage.md  git_submodule.md  git_usage.md  linux_core_pattern.md  samba.md
network/: CMakeLists.txt
network/include/: acceptor.h  callback.h  connection.h  engine.h  message.h
network/sources/: acceptor_impl.h  accpetor_impl.cpp  connection_impl.cpp  connection_impl.h  dispatcher.h  engine_impl.cpp  engine_impl.h  epoll_impl.h  event_dispatcher.cpp  event_dispatcher.h  io_dispatcher.cpp  io_dispatcher.h  message_impl.h  message_pool.h  receive_buffer.h  send_buffer.h  task_queue.h
tests/base_tests/: CMakeLists.txt  README.md  compile.sh  gencov.sh
tests/base_tests/channel/: test_spsc_fixed_bounded_channel.cpp  test_spsc_variable_bounded_channel.cpp
tests/base_tests/logger/: test_logger.cpp
tests/base_tests/utilities/: test_json.cpp
